sweet alert-json-local storage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
     <div id="modal-container" class="modal-container"></div>
 
+    <div id="boton-comprar" class="boton-comprar"></div>
+
+    <button id="btnSweetAlert">Comprar</button>
     <footer>
         <div class="pie">
           <p>(+) 54 9 351 595 7584 <br> Av. Recta Martinolli 7850, Córdoba, Argentina <br> Todos los derechos reservados</p>
@@ -37,5 +40,6 @@
       </footer>
 
     <script src="./js/index.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
